[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/Chinese.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/font1.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/font3.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/font2.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/style重新註冊.tres" type="StyleBox" id=7]
[ext_resource path="res://pic/bg.jpg" type="Texture" id=8]
[ext_resource path="res://script/1.3.2.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0941176, 0.815686, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0941176, 0.815686, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=1]
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=8]
size = 45
use_filter = true
extra_spacing_top = -5
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.87451, 0.796078, 0.796078, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Node2D" type="Node2D"]
script = ExtResource( 9 )

[node name="BackgroundPicture" type="TextureRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
texture = ExtResource( 8 )

[node name="BackgroundControl" type="Panel" parent="BackgroundPicture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -649.5
margin_top = -371.0
margin_right = 649.5
margin_bottom = 371.0
custom_styles/panel = SubResource( 9 )

[node name="NextButton" type="Button" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = 229.0
margin_right = 110.0
margin_bottom = 309.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "下一步"

[node name="VerificationLineEdit" type="LineEdit" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = 38.0
margin_right = 250.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
expand_to_text_length = true
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_alpha = 1.0

[node name="輸入驗證碼" type="Label" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -91.0
margin_right = 210.0
margin_bottom = -13.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "請輸入驗證碼："

[node name="step1" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 200.0
margin_top = 100.0
margin_right = 282.0
margin_bottom = 144.0
custom_colors/font_color = Color( 0.87451, 0.776471, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0.87451, 0.776471, 0.776471, 1 )
custom_fonts/font = SubResource( 8 )
text = "step 1"

[node name="dot1" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_top = 210.0
margin_right = 164.0
margin_bottom = 224.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( -688, 173 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "................................"
align = 1

[node name="step2" type="Label" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -271.0
margin_right = 40.5
margin_bottom = -227.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "step 2"

[node name="dot2" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 404.5
margin_top = 210.0
margin_right = 568.5
margin_bottom = 224.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( -688, 173 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "................................"
align = 1

[node name="step3" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 1016.0
margin_top = 100.0
margin_right = 1135.0
margin_bottom = 161.0
custom_colors/font_color = Color( 0.87451, 0.776471, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0.87451, 0.776471, 0.776471, 1 )
custom_fonts/font = SubResource( 8 )
text = "step 3"

[node name="login" type="Label" parent="BackgroundPicture"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 69.0
margin_right = 250.0
margin_bottom = 214.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 12 )
text = "忘記密碼"
align = 1
valign = 1
uppercase = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BackgroundPicture/BackgroundControl/NextButton" to="." method="_on_next_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
